--- a/style.css
+++ b/style.css
@@ -39,3 +39,17 @@ img:hover {
     background-color: black;
     margin: 8px auto;
 }
+
+#mycarousel {
+    background-color: deepskyblue;
+}
+#mycarousel img{
+    height: 300px;
+    margin-top: 35px;
+}
+.carousel-inner p{
+    margin-bottom: 15px;
+    margin-top: 15px;
+    color: white;
+    font-size: 20px;
+}
